@@ -4,5 +4,6 @@
 #   20200607 v0.5: EXIF SubSecCreateDate and CreateDate extractions added
 #   20200723 v0.9: EXIF Model and File System ModifyTime extractions added
 #   20200816 v1.0: alpha-version of Minimal Viable Product with file duplication avoidance
-#   20211218 v1.1: beta-version with added logging and removed debug and dry run functionality
+#   20211211 v1.1: beta-version with option to select YEAR/MONTH/DAY or YEAR/MONTH or YEAR destination folder structure
+#   20211218 v1.2: added logging
 #=======================================================================
